--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+html{
+    margin: 0;
+    padding: 0;
+}
 body{
-    background-color: rgb(238, 236, 136);
+    background-color: rgb(167, 165, 104);
 }
 
-
+li, a{
+    text-decoration: none;
+}
 .container-gambar{
     display: flex;
     margin-left: 150px;
